--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <title>Weather App</title>
 </head>
 <body>
-    <div class="widget">
-        <h1 class="temperature"></h1>
-        <p id="description"></p>
-        <p id="city"></p>
-    </div>
+    <section class="widget">
+        <div id="widget-header"><span>Weather App</span></div>
+        <div id="weather">
+            <h1 class="temperature"></h1>
+            <p id="description"></p>
+            <p id="city"></p>
+        </div>
+        <div id="widget-footer">
+            <p>Ressentie : <span id="feels_like"></span>°C</p>
+            <p>Humidité : <span id="humidity"></span>%</p>
+        </div>
+    </section>
     <script src="meteo.js"></script>
 </body>
 </html>
