Appel de l'API + Récupération des données pour affichage + update des données météo toutes les heures

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <p id="city"></p>
         </div>
         <div id="widget-footer">
-            <p>Ressentie : <span id="feels_like"></span>°C</p>
-            <p>Humidité : <span id="humidity"></span>%</p>
+            <p>Ressentie : <span id="feels_like"></span></p>
+            <p>Humidité : <span id="humidity"></span></p>
         </div>
     </section>
     <script src="meteo.js"></script>
