Petites améliorations de design du widget

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="widget">
         <div id="widget-header"><span>Weather App</span></div>
         <div id="weather">
+            <img id="weather-icon" src="" alt="Icône météo">
             <h1 class="temperature"></h1>
             <p id="description"></p>
             <p id="city"></p>
